; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_sort.c_zend_sort_2.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_sort.c_zend_sort_2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i64 (i8*, i8*)*, i32 (i8*, i8*)*)* @zend_sort_2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zend_sort_2(i8* %0, i8* %1, i64 (i8*, i8*)* %2, i32 (i8*, i8*)* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64 (i8*, i8*)*, align 8
  %8 = alloca i32 (i8*, i8*)*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 (i8*, i8*)* %2, i64 (i8*, i8*)** %7, align 8
  store i32 (i8*, i8*)* %3, i32 (i8*, i8*)** %8, align 8
  %9 = load i64 (i8*, i8*)*, i64 (i8*, i8*)** %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i64 %9(i8* %10, i8* %11)
  %13 = icmp sgt i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %4
  %15 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %8, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 %15(i8* %16, i8* %17)
  br label %19

19:                                               ; preds = %14, %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
